--- a/index.html
+++ b/index.html
@@ -1,10 +1,100 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My GitHub Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background-color: #24292e;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            text-decoration: none;
+            color: #0366d6;
+            margin: 0 15px;
+            font-size: 1.2em;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        section {
+            margin-bottom: 40px;
+        }
+        section h2 {
+            font-size: 1.8em;
+            border-bottom: 2px solid #0366d6;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #24292e;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        footer p {
+            margin: 0;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
 <body>
-    <h1>hello world</h1>
+    <header>
+        <h1>Welcome to My GitHub Profile</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>Hello! I'm a passionate developer who loves coding, learning, and sharing knowledge. I specialize in [your skills or focus areas].</p>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Project 1:</strong> <a href="https://github.com/your-repo">Description or Link</a></li>
+                <li><strong>Project 2:</strong> <a href="https://github.com/your-repo">Description or Link</a></li>
+                <li><strong>Project 3:</strong> <a href="https://github.com/your-repo">Description or Link</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Contact Me</h2>
+            <p>Feel free to reach out via email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p>Or connect on <a href="https://www.linkedin.com/in/your-linkedin">LinkedIn</a>.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
