--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>Hello! I'm a passionate developer who loves coding, learning, and sharing knowledge. I specialize in [your skills or focus areas].</p>
+            <p>Hello! I'm a passionate developer who loves coding, learning, and sharing knowledge. I specialize in Application Developement.</p>
         </section>
 
         <section>
