--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portfolio</title>
+    <title>Your Name - Software Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -344,8 +344,28 @@
                         <span class="tech-tag">Firebase</span>
                     </div>
                 </div>
+                <div class="project-card">
+                    <h3>Online Payment Fraud Detection </h3>
+                    <p>Chesks the Previous dataset and detect weather the apyment is fraud or not fraud.</p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Tensorflow</span>
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Machine Learning</span>
+                    </div>
             </div>
+            <div class="project-card">
+                <h3>Survilence Bot </h3>
+                <p>Android controlled Bot used for security Purpose usnig Esp-32 and Raspberry-pi </p>
+                <div class="tech-stack">
+                    <span class="tech-tag">Python</span>
+                </div>
         </div>
+        <div class="project-card">
+            <h3>Agriculture Bot</h3>
+            <p>Helps for automatic moisture sensing and seed sowing and watering the crop.</p>
+            <div class="tech-stack">
+                <span class="tech-tag">C</span>
+            </div>
     </section>
 
     <!-- Contact Section -->
