--- a/index.html
+++ b/index.html
@@ -322,6 +322,9 @@
                         <span class="tech-tag">Html</span>
                         <span class="tech-tag">css</span>
                         <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Typescript</span>
+                        
                     </div>
                 </div>
                 <div class="project-card">
