--- a/index.html
+++ b/index.html
@@ -440,7 +440,31 @@
                         <span class="tech-tag">Machine Learning</span>
                     </div>
                 </div>
-
+                  <div class="project-card">
+                    <h3>Emotion Detection Android App using TFLite</h3>
+                    <p>An Android application that captures a user's face via the camera, detects facial features using ML Kit, and classifies emotions in real-time using a custom-trained TensorFlow Lite model. The app preprocesses face images, runs inference on-device, and outputs emotional states such as happy, sad, angry, surprised, etc.</p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Android (Java)</span>
+                        <span class="tech-tag">TensorFlow Lite</span>
+                        <span class="tech-tag">ML Kit Face Detection</span>
+                        <span class="tech-tag">On-device inference</span>
+                         <span class="tech-tag">Custom CNN model</span>
+                         <span class="tech-tag">Asset management (labels, .tflite model)</span>    
+                          </div>
+                </div>
+                 <div class="project-card">
+                    <h3>MoodPet – Gamified Mental Wellness Companion</h3>
+                    <p>MoodPet is a feature-rich Android application that supports mental health through gamified self-care. It encourages users to track their mood, reflect through journaling, and maintain daily wellness habits — all while caring for a virtual pet that evolves with their emotional progres,
+                        and suggests songs based on user mood using spotify.</p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Android (Java)</span>
+                        <span class="tech-tag">Firebase Auth & Firestore</span>
+                        <span class="tech-tag">TFLite for emotion recognition</span>
+                        <span class="tech-tag">MPAndroidChart</span>
+                         <span class="tech-tag">Lottie Animations</span>
+                         <span class="tech-tag">Text-to-Speech & MediaPlayer</span>    
+                          </div>
+                </div>
                 <div class="project-card">
                     <h3>Surveillance Bot</h3>
                     <p>Android-controlled security robot with live video streaming, motion detection, and remote navigation. Built for security monitoring with ESP-32 and Raspberry Pi integration.</p>
