--- a/index.html
+++ b/index.html
@@ -379,6 +379,18 @@
                          <span class="tech-tag">Text-to-Speech & MediaPlayer</span>    
                           </div>
                 </div>
+                <div class="project-card">
+                    <h3>🧠 AI Auto-Suggestion App</h3>
+                    <p>A smart web app that uses Google Gemini 2.0 Flash to provide real-time AI suggestions for emails,and messages. Built with React (frontend) and FastAPI (backend), it detects context (like email drafting) and returns tailored suggestions from the Gemini model. Firebase handles authentication, making the app secure and user-specific.</p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">FastAPI</span>
+                        <span class="tech-tag">Gemini API</span>
+                        <span class="tech-tag">Firebase Auth</span>
+                         <span class="tech-tag">Custom CNN model</span>
+                         <span class="tech-tag">Tailwind CSS</span>    
+                          </div>
+                </div>
                     <div class="project-card">
                     <h3>Women Safety App</h3>
                     <p>A comprehensive safety application for women featuring SOS alerts, real-time location sharing, emergency contacts, and one-click calling. Includes offline functionality and GPS tracking.</p>
