--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@
                         <span class="skill-tag">ESP-32</span>
                         <span class="skill-tag">Raspberry Pi</span>
                         <span class="skill-tag">C/C++</span>
+                        <span class="skill-tag">Client and Server Communication</span>
+                        <span class="skill-tag">MQTT,HTTP</span>
                     </div>
                 </div>
             </div>
@@ -488,17 +490,6 @@
                         <span class="tech-tag">Microcontrollers</span>
                     </div>
                 </div>
-                  <div class="project-card">
-                    <h3>Portfolio Website</h3>
-                    <p>A modern, interactive portfolio website featuring smooth animations, responsive design, and dynamic content. Includes project showcase, skill visualization, and contact integration.</p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">React</span>
-                        <span class="tech-tag">TypeScript</span>
-                        <span class="tech-tag">Tailwind CSS</span>
-                        <span class="tech-tag">Framer Motion</span>
-                        <span class="tech-tag">Vite</span>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -566,6 +557,8 @@
         // Typewriter Effect
         const typewriterElement = document.getElementById('typewriter');
         const phrases = [
+            'Health Care And Solutions'
+            'NFCura'
             'Full Stack Developer',
             'Android App Developer',
             'Problem Solver',
