--- a/index.html
+++ b/index.html
@@ -517,80 +517,93 @@
     </section>
 
     <script>
-        // Matrix Background Effect
-        const canvas = document.getElementById('matrix');
-        const ctx = canvas.getContext('2d');
+    // Matrix Effect
+    const canvas = document.getElementById('matrix-canvas');
+    const ctx = canvas.getContext('2d');
 
-        function resizeCanvas() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        }
+    // Set canvas size
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-        resizeCanvas();
-        window.addEventListener('resize', resizeCanvas);
+    // Matrix characters
+    const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789@#$%^&*()*&^%+-/~{[|`]}';
+    const lettersArray = letters.split('');
 
-        const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789@#$%^&*()*&^%';
-        const fontSize = 14;
-        const columns = canvas.width / fontSize;
-        const drops = Array(Math.floor(columns)).fill(1);
+    const fontSize = 10;
+    const columns = canvas.width / fontSize;
 
-        function drawMatrix() {
-            ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
+    // Initialize drops array
+    const drops = [];
+    for (let x = 0; x < columns; x++) {
+        drops[x] = 1;
+    }
 
-            ctx.fillStyle = '#2ecc71';
-            ctx.font = fontSize + 'px monospace';
+    function drawMatrix() {
+        // Create trailing effect with semi-transparent black
+        ctx.fillStyle = 'rgba(0, 0, 0, 0.04)';
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-            drops.forEach((drop, i) => {
-                const text = letters[Math.floor(Math.random() * letters.length)];
-                ctx.fillText(text, i * fontSize, drop * fontSize);
+        // Set text properties
+        ctx.fillStyle = '#2ecc71';
+        ctx.font = fontSize + 'px monospace';
 
-                if (drop * fontSize > canvas.height && Math.random() > 0.975) {
-                    drops[i] = 0;
-                }
-                drops[i]++;
-            });
-        }
+        drops.forEach((drop, i) => {
+            const text = lettersArray[Math.floor(Math.random() * lettersArray.length)];
+            ctx.fillText(text, i * fontSize, drop * fontSize);
 
-        setInterval(drawMatrix, 30);
-
-        // Typewriter Effect
-        const typewriterElement = document.getElementById('typewriter');
-        const phrases = [
-            'Full Stack Developer',
-            'Android App Developer',
-            'Problem Solver',
-            'Tech Enthusiast',
-            'Open Source Contributor'
-        ];
-
-        let phraseIndex = 0;
-        let charIndex = 0;
-        let isDeleting = false;
-
-        function type() {
-            const currentPhrase = phrases[phraseIndex];
-            
-            if (isDeleting) {
-                typewriterElement.textContent = currentPhrase.substring(0, charIndex - 1);
-                charIndex--;
-            } else {
-                typewriterElement.textContent = currentPhrase.substring(0, charIndex + 1);
-                charIndex++;
+            if (drop * fontSize > canvas.height && Math.random() > 0.975) {
+                drops[i] = 0;
             }
+            drops[i]++;
+        });
+    }
 
-            if (!isDeleting && charIndex === currentPhrase.length) {
-                setTimeout(() => isDeleting = true, 1500);
-            } else if (isDeleting && charIndex === 0) {
-                isDeleting = false;
-                phraseIndex = (phraseIndex + 1) % phrases.length;
-            }
+    setInterval(drawMatrix, 30);
 
-            const typingSpeed = isDeleting ? 100 : 200;
-            setTimeout(type, typingSpeed);
+    // Handle window resize
+    window.addEventListener('resize', () => {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+    });
+
+    // Typewriter Effect
+    const typewriterElement = document.getElementById('typewriter');
+    const phrases = [
+        'Full Stack Developer',
+        'Android App Developer',
+        'Problem Solver',
+        'Tech Enthusiast',
+        'Open Source Contributor'
+    ];
+
+    let phraseIndex = 0;
+    let charIndex = 0;
+    let isDeleting = false;
+
+    function type() {
+        const currentPhrase = phrases[phraseIndex];
+        
+        if (isDeleting) {
+            typewriterElement.textContent = currentPhrase.substring(0, charIndex - 1);
+            charIndex--;
+        } else {
+            typewriterElement.textContent = currentPhrase.substring(0, charIndex + 1);
+            charIndex++;
         }
 
-        type();
-    </script>
+        if (!isDeleting && charIndex === currentPhrase.length) {
+            setTimeout(() => isDeleting = true, 1500);
+        } else if (isDeleting && charIndex === 0) {
+            isDeleting = false;
+            phraseIndex = (phraseIndex + 1) % phrases.length;
+        }
+
+        const typingSpeed = isDeleting ? 100 : 200;
+        setTimeout(type, typingSpeed);
+    }
+
+    type();
+</script>
+
 </body>
 </html>
