--- a/index.html
+++ b/index.html
@@ -346,6 +346,92 @@
         <div class="container">
             <h2 class="section-title">Featured Projects</h2>
             <div class="project-grid">
+                <div class="project-card web ai">
+    <span class="featured">⭐ Flagship</span>
+    <h3>EqualVoice – AI-Powered Accessible Communication</h3>
+    <p>
+        Built a real-time AI communication platform enabling deaf, mute,
+        and speech-impaired users to participate in live phone calls
+        without speaking or hearing. Implemented multi-turn conversational AI
+        with speech-to-text, context-aware responses, and text-to-speech
+        audio injection over cloud telephony systems.
+    </p>
+    <div class="tech-stack">
+        <span class="tech-tag">Speech-to-Text</span>
+        <span class="tech-tag">Text-to-Speech</span>
+        <span class="tech-tag">Conversational AI</span>
+        <span class="tech-tag">Cloud Telephony</span>
+        <span class="tech-tag">Scalable Backend</span>
+    </div>
+    <div class="project-links">
+        <a href="#">GitHub</a>
+        <a href="#">Case Study</a>
+    </div>
+</div>
+<div class="project-card android ai">
+    <span class="featured">⭐ Flagship</span>
+    <h3>Circlify – AI Virtual Fashion Try-On</h3>
+    <p>
+        Developed a universal AI-based virtual try-on platform allowing users
+        to visualize clothing across e-commerce and social media platforms
+        without retailer integration. Built a low-latency generative AI
+        pipeline for garment segmentation and photorealistic try-on rendering
+        within 9–15 seconds.
+    </p>
+    <div class="tech-stack">
+        <span class="tech-tag">Generative AI</span>
+        <span class="tech-tag">Computer Vision</span>
+        <span class="tech-tag">Android Overlay</span>
+        <span class="tech-tag">Firebase</span>
+        <span class="tech-tag">Cloud AI</span>
+    </div>
+    <div class="project-links">
+        <a href="#">GitHub</a>
+        <a href="#">Demo</a>
+    </div>
+</div>
+<div class="project-card web ai">
+    <span class="featured">⭐ Flagship</span>
+    <h3>NEXUS – AI Capstone Project Management Platform</h3>
+    <p>
+        Built a multi-tenant academic platform to manage capstone projects
+        with real-time dashboards for students, faculty, and administrators.
+        Implemented AI-based Project Readiness Checks to evaluate feasibility,
+        clarity, and outcome readiness, while enabling secure industry
+        visibility.
+    </p>
+    <div class="tech-stack">
+        <span class="tech-tag">AI Evaluation</span>
+        <span class="tech-tag">Firestore</span>
+        <span class="tech-tag">Multi-Tenant Architecture</span>
+        <span class="tech-tag">Role-Based Dashboards</span>
+    </div>
+    <div class="project-links">
+        <a href="#">GitHub</a>
+        <a href="#">Live Platform</a>
+    </div>
+</div>
+<div class="project-card android iot">
+    <span class="featured">⭐ Flagship</span>
+    <h3>NFCura – NFC-Based Healthcare System</h3>
+    <p>
+        Designed and developed an NFC-powered healthcare platform with
+        role-based access for doctors, patients, and administrators.
+        Implemented secure QR-based patient data access with real-time
+        Firebase synchronization supporting 50+ patient records.
+    </p>
+    <div class="tech-stack">
+        <span class="tech-tag">NFC</span>
+        <span class="tech-tag">Firebase Realtime DB</span>
+        <span class="tech-tag">Healthcare Security</span>
+        <span class="tech-tag">QR Code</span>
+    </div>
+    <div class="project-links">
+        <a href="#">GitHub</a>
+        <a href="#">Demo</a>
+    </div>
+</div>
+
                 <div class="project-card">
                     <h3>Task Manager Pro</h3>
                     <p>A modern, responsive task management application with real-time updates, drag-and-drop functionality, and task categorization. Features include priority levels, due dates, progress tracking, and a clean, intuitive interface.</p>
